Updated index.html file

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
     <div class="site">
         <header class="visualiser-menu">
             <div class="page-title">
-                <h1>Data Visualiser</h1>
+                <h1>Data Visualiser in JS</h1>
             </div>
             <nav>
                 <ul>
